---------------------------------------------------------------------------------------------------
Version: 0.2.18
Date: ????
  Changes:
    - Added support for working across belt ghosts
    - Added support for working across splitters
---------------------------------------------------------------------------------------------------
Version: 0.2.17
Date: 2025-06-01
  Changes:
    - Added support for default item to show on splitters
    - Added support for lane splitters
  Bugfixes:
    - Fixed crash when setting "Full chest" request on ghost logistic containers
  Fixes:
    - Support for setting "Full chest" requests on quality logistic containers
---------------------------------------------------------------------------------------------------
Version: 0.2.16
Date: 2025-05-19
  Changes:
    - Enable "Use filters" when setting a filter on an inserter, configurable
  Fixes:
    - Fixed filtering mining drill resources when product name is different
---------------------------------------------------------------------------------------------------
Version: 0.2.15
Date: 2025-04-21
  Changes:
    - Support for getting inventory of proxy containers
  Bugfixes:
    - Don't crash on getting inventory of proxy containers
---------------------------------------------------------------------------------------------------
Version: 0.2.14
Date: 2025-04-01
  Changes:
    - Added support for requested quality modules on crafting machines
  Bugfixes:
    - Actually support fluid filters on fluid mining drills. Fixed bad commit.
    - Do not crash on ghost loaders
---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 2025-03-31
  Changes:
    - Support ghost entities
    - Support fluid filters on fluid mining drills
  Bugfixes:
    - Do not crash on proxy-containers
---------------------------------------------------------------------------------------------------
Version: 0.2.12
Date: 2025-01-11
  Bugfixes: